# cproject

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/libs/dynamic/: CMakeLists.txt  dynamic.cpp  dynamic.h  test.cpp  test.h
src/libs/static/: CMakeLists.txt  static.cpp  static.h
